fix: use min-height 1lh for collapse. closes: #3885
* Update collapse.css

* use min-height: 1lh for collapse-title, as it has a good browser support

---------

--- a/packages/daisyui/src/components/collapse.css
+++ b/packages/daisyui/src/components/collapse.css
@@ -120,7 +120,7 @@
     width: 100%;
     padding: 1rem;
     padding-inline-end: 3rem;
-    min-height: 3.75rem;
+    min-height: 1lh;
     transition: background-color 0.2s ease-out;
   }
 }
@@ -205,7 +205,7 @@
   width: 100%;
   padding: 1rem;
   padding-inline-end: 3rem;
-  min-height: 3.75rem;
+  min-height: 1lh;
   transition: background-color 0.2s ease-out;
 }
 .collapse-open {
